# Super-LiDAR-Intensity

./: ReadMe.md  SuperLidarIntensity.yaml
Super/: CMakeLists.txt  package.xml
Super/launch/: intensity_image.launch
Super/scripts/panoramic_virtualCamera/: config.py  config_VC.yaml  config_panoramic.example.yaml  dataset.py  infer.py  main.py  net.py
Super/src/data_generate/: intensity_image.cpp  record_rosbag.cpp  reflecctance_calib.cpp
diff_imaging_lidar_place_recognition/: CMakeLists.txt  package.xml
diff_imaging_lidar_place_recognition/config/: params.yaml
diff_imaging_lidar_place_recognition/launch/: run.launch  rviz_diff.rviz
diff_imaging_lidar_place_recognition/src/: image_handler.h  keyframe.cpp  keyframe.h  loop_detection.cpp  loop_detection_node.cpp  parameters.h
imaging_lidar_place_recognition/: CMakeLists.txt  package.xml
imaging_lidar_place_recognition/config/: params.yaml
imaging_lidar_place_recognition/launch/: run.launch  rviz.rviz
imaging_lidar_place_recognition/src/: image_handler.h  keyframe.cpp  keyframe.h  loop_detection.cpp  loop_detection_node.cpp  parameters.h
lane_detect/: CMakeLists.txt  package.xml
lane_detect/include/lane_detect/: nms.h
lane_detect/launch/: lane_detect.launch
lane_detect/model/laneatt/: detector.py  laneatt.py  transform.py
lane_detect/rviz/: lane_detect.rviz
lane_detect/src/: lane_detect.cpp  lane_detect_static.cpp
lane_detect/src/nms/: nms.cpp  nms_kernel.cu
